# autocomplete

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
data/map/osm/: download-and-prepare-osm-restaurant-data.sh
documentation/requests/: poi_index.es  suggestions.es
settings/: base.toml  dev.toml  prod.toml
settings/mappings/: poi.json
src/: lib.rs  main.rs
src/client/: client.rs  mod.rs  request.rs  response.rs
src/configuration/: app_config.rs  elasticsearch.rs  env.rs  mod.rs  server.rs
src/constant/: values.rs
src/dto/: error.rs  request.rs  response.rs
src/handler/: autocomplete.rs
src/server/: server.rs  state.rs
src/service/: autocomplete.rs
src/utils/: dir.rs
