[package]
name = "autocomplete"
authors = ["Javier Alvarez"]
version = "0.1.0"
edition = "2021"
keywords = ["web", "api", "rest","elasticsearch"]
license = "MIT"

[dependencies]
axum = "0.7.9"
axum-macros = "0.4.2"
config = "0.14.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.0", features = ["full"] }
strum = "0.26"
strum_macros = "0.26"
once_cell = "1.20.2"
elasticsearch = "8.15.0-alpha.1"